--- a/LuoliDatabase/LuoliDatabase.csproj
+++ b/LuoliDatabase/LuoliDatabase.csproj
@@ -3,6 +3,13 @@
     <ProjectReference Include="..\LuoliCommon\LuoliCommon.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.32.1" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.71.0" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.71.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.72.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="MySqlConnector" Version="2.4.0" />
     <PackageReference Include="SqlSugarCore" Version="5.1.4.206-preview01" />
     <PackageReference Include="SqlSugarCore.MySqlConnector" Version="5.1.4.92" />
