ExternalOrderService的增删差改写好了；  DTO2Entity  Entity2DTO 还需要修改； 因为收到的agiso内容不确定

--- a/GenerateEntities/GenerateEntities.csproj
+++ b/GenerateEntities/GenerateEntities.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <ProjectReference Include="../LuoliDatabase/LuoliDatabase.csproj" />
+    <ProjectReference Include="..\LuoliUtils\LuoliUtils.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
