--- a/LuoliUtils/LuoliUtils.csproj
+++ b/LuoliUtils/LuoliUtils.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Polly" Version="8.6.4" />
     <PackageReference Include="Polly.Core" Version="8.6.4" />
   </ItemGroup>
 
