--- a/LuoliUtils/LuoliUtils.csproj
+++ b/LuoliUtils/LuoliUtils.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Polly" Version="8.6.4" />
     <PackageReference Include="Polly.Core" Version="8.6.4" />
+    <PackageReference Include="System.Net.Http.WinHttpHandler" Version="9.0.9" />
   </ItemGroup>
 
   <ItemGroup>
